alignment-fixed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Montserrat', sans-serif;
-    margin: 0px;
+   margin: 0px;
 }
 h1 {
     font-size: 40px;
@@ -24,19 +24,18 @@ section{
 .half-width-one p{
     padding-bottom: 4%;
 }
+
+.half-width-two img {
+    width: 100%;
+    height: 100%; 
+    position: relative;
+    margin-left: 5%; 
+}
 .half-width-two{
     width: 50%;
-    margin-right: 10%;
-}
-.half-width-two img {
-    width: 100%; 
-    position: relative; 
-}
-.half-width-two{
-    width: 40%;
     margin-top: 5%;
     margin-left: 5%;
-    margin-right: 3%;
+    margin-right: 10%;
     padding: 5px;
 }
 
@@ -78,7 +77,6 @@ section{
 .div-recipie-title{
     margin-top: 10px;
     border: 1px solid rgb(241, 234, 234);
-    /* box-shadow: 4px 4px 5px gray; */
     box-shadow: 0px 0px 10px 5px grey;
     margin-left: 2%;
     margin-bottom: 2%;
